OPTION(PUGIXML_LIB_BUILD_STATIC "Build pugixml_lib static library." ON)

FILE(GLOB INCLUDE_FILES "*.hpp")
INSTALL(FILES ${INCLUDE_FILES} DESTINATION ${INCLUDE_INSTALL_DIR})

IF(BUILD_SHARED_LIBS)
  SET(PUGIXML_LIB_BUILD_SHARED ON)
ENDIF(BUILD_SHARED_LIBS)

if( CMAKE_COMPILER_IS_GNUCXX )
  #Get compiler version.
  execute_process( COMMAND ${CMAKE_CXX_COMPILER} -dumpversion
                   OUTPUT_VARIABLE GNUCXX_VERSION )
 
  #-Werror=* was introduced -after- GCC 4.1.2
  if( GNUCXX_VERSION VERSION_GREATER 4.1.2 )
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Werror=strict-aliasing")
  endif()
endif( CMAKE_COMPILER_IS_GNUCXX )

SET( PUGIXML_INCLUDE_DIR . )

SET( PUBLIC_HEADERS
    ${PUGIXML_INCLUDE_DIR}/pugiconfig.hpp
    ${PUGIXML_INCLUDE_DIR}/pugixml.hpp
    )

SOURCE_GROUP( "Public API" FILES ${PUBLIC_HEADERS} )

SET(pugixml_sources
                pugixml.cpp)

# Install instructions for this target
IF(PUGIXML_WITH_CMAKE_PACKAGE)
    SET(INSTALL_EXPORT EXPORT pugixml)
ELSE(PUGIXML_WITH_CMAKE_PACKAGE)
    SET(INSTALL_EXPORT)
ENDIF(PUGIXML_WITH_CMAKE_PACKAGE)

IF(PUGIXML_LIB_BUILD_SHARED)
    ADD_DEFINITIONS( -DPUGIXML_DLL_BUILD )
    ADD_LIBRARY(pugixml_lib SHARED ${PUBLIC_HEADERS} ${pugixml_sources})
    SET_TARGET_PROPERTIES( pugixml_lib PROPERTIES VERSION ${PUGIXML_VERSION} SOVERSION ${PUGIXML_VERSION_MAJOR})
    SET_TARGET_PROPERTIES( pugixml_lib PROPERTIES OUTPUT_NAME pugixml )

    INSTALL( TARGETS pugixml_lib ${INSTALL_EXPORT}
         RUNTIME DESTINATION ${RUNTIME_INSTALL_DIR}
         LIBRARY DESTINATION ${LIBRARY_INSTALL_DIR}
         ARCHIVE DESTINATION ${ARCHIVE_INSTALL_DIR})

    IF(NOT CMAKE_VERSION VERSION_LESS 2.8.11)
        TARGET_INCLUDE_DIRECTORIES( pugixml_lib PUBLIC
                                   $<INSTALL_INTERFACE:${INCLUDE_INSTALL_DIR}>
                                   $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/${PUGIXML_INCLUDE_DIR}>)
    ENDIF(NOT CMAKE_VERSION VERSION_LESS 2.8.11)

ENDIF()

IF(PUGIXML_LIB_BUILD_STATIC)
    ADD_LIBRARY(pugixml_lib_static STATIC ${PUBLIC_HEADERS} ${pugixml_sources})
    SET_TARGET_PROPERTIES( pugixml_lib_static PROPERTIES VERSION ${PUGIXML_VERSION} SOVERSION ${PUGIXML_VERSION_MAJOR})
    SET_TARGET_PROPERTIES( pugixml_lib_static PROPERTIES OUTPUT_NAME pugixml )

    INSTALL( TARGETS pugixml_lib_static ${INSTALL_EXPORT}
         RUNTIME DESTINATION ${RUNTIME_INSTALL_DIR}
         LIBRARY DESTINATION ${LIBRARY_INSTALL_DIR}
             ARCHIVE DESTINATION ${ARCHIVE_INSTALL_DIR})

    IF(NOT CMAKE_VERSION VERSION_LESS 2.8.11)
        TARGET_INCLUDE_DIRECTORIES( pugixml_lib_static PUBLIC
                                $<INSTALL_INTERFACE:${INCLUDE_INSTALL_DIR}>
                                $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/${PUGIXML_INCLUDE_DIR}>
                                )
     ENDIF(NOT CMAKE_VERSION VERSION_LESS 2.8.11)

ENDIF()
